tests/checker/bad/bad_fields1.scilla
contract Empty
()

field bad_foo : (Int32 -> Int32) = fun (a : Int32) => a

transition dummy()

end
